--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 ul{
-  padding-left:0;
+  padding-left: 0;
 }
 
 li{
-  list-style:none;
+  list-style: none;
 }
 
 /* 三列表示 */
 .chara {
   display: flex;
   flex-wrap: wrap;
+  /* justify-content: space-between; */
 }
 .chara > div {
   flex-basis: 33%;
